--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                 <div class="project-btn-grp">
                     <a href="https://github.com/GeekyGaurab/Secrets" class="project-btn github" target="_blank">Github Repo</a>
-                    <a href="https://lit-spire-60596.herokuapp.com/" class="project-btn live" target="_blank">See Live</a>
+                    <a href="https://secrets-gaurab.herokuapp.com/" class="project-btn live" target="_blank">See Live</a>
                 </div>
             </div>
         </div>
@@ -66,7 +66,7 @@
 
                 <div class="project-btn-grp">
                   <a href="https://github.com/GeekyGaurab/Classroom" class="project-btn github" target="_blank">Github Repo</a>
-                  <a href="https://arcane-oasis-11363.herokuapp.com/" class="project-btn live" target="_blank">See Live</a>
+                  <a href="https://classroom-gaurab.herokuapp.com/" class="project-btn live" target="_blank">See Live</a>
                 </div>
             </div>
         </div>
